--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
+/*
+** Idea By: Kirolos Mahfouz
+** Designed By: Kirolos Mahfouz
+** Frontend By: Kirolos Mahfouz
+*/
+
 /* Start Main Settings */
 
 * {
@@ -25,14 +31,131 @@ body {font-family: "Poppins", sans-serif;}
 	background-color: transparent !important;
 }
 
-/* ::-webkit-scrollbar {
-	width: 5px;
+/* End Main Settings */
+/* Start Guide */
+
+.guide {
+	position: fixed !important;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	padding: 30px 50px;
 	background-color: var(--bg-color);
+	color: var(--fg-color);
+	overflow: auto;
+	z-index: 4000;
+	transition: var(--sub-transition);
 }
 
-::-webkit-scrollbar-thumb {background-color: var(--main-color);} */
+.guide.hide {
+	opacity: 0;
+	visibility: hidden;
+}
 
-/* End Main Settings */
+.guide h1 {
+	position: relative;
+	margin-bottom: 30px;
+	color: var(--main-color);
+}
+
+.guide h1::before {
+	content: 'Beta';
+	position: absolute;
+	bottom: 6px;
+	left: 213px;
+	color: var(--fg-color);
+	font-size: 14px;
+	font-weight: 400;
+	padding: 2px 8px;
+	border-radius: 3px;
+}
+
+.guide h1::after {
+	content: '';
+	position: absolute;
+	bottom: -15px;
+	left: 0;
+	height: 2px;
+	width: 100%;
+	background-color: var(--fg-color);
+	opacity: .2;
+}
+
+.guide h3 {
+	margin-bottom: 15px;
+	font-weight: 500;
+}
+
+.guide .what {margin-bottom: 20px;}
+
+.guide .how {margin-bottom: 40px;}
+
+.guide p {
+	font-weight: 200;
+	line-height: 2;
+	font-size: 14px;
+}
+
+.guide .guide-text {
+	padding-left: 20px;
+	margin-bottom: 20px;
+}
+
+.guide .guide-text h4 {
+	margin-bottom: 10px;
+	font-weight: 400;
+}
+
+.guide .guide-text p {
+	line-height: 2.5;
+}
+
+.guide .guide-text i,
+.guide .guide-text .key {
+	padding: 4px 8px;
+	margin: 0 5px;
+	border: 1px solid #6a6f73a1;
+	background: #423e3e4d;
+	color: #fff;
+	border-radius: 3px;
+}
+
+.guide .close-guid {
+	margin-bottom: 50px;
+	text-align: right;
+}
+
+.guide .close-guid button {
+	all: unset;
+	width: 100px;
+	height: 30px;
+	line-height: 26px;
+	margin: 0 15px;
+	border: 1px solid #6a6f73a1;
+	background: #423e3e4d;
+	color: #fff;
+	border-radius: 3px;
+	cursor: pointer;
+	text-align: center;
+	font-size: 14px;
+	transition: var(--sub-transition);
+}
+
+.guide .close-guid button:hover,
+.guide .close-guid button:focus {
+	background-color: var(--main-color);
+}
+
+@media (max-width: 500px) {
+	.guide {padding: 20px 20px;}
+
+	.guide .guide-text {padding-left: 0;}
+
+	.guide .guide-text p {line-height: 1.8;}
+}
+
+/* End Guide */
 /* Start Slider */
 
 .slider {
@@ -293,7 +416,7 @@ body {font-family: "Poppins", sans-serif;}
 }
 
 @media (max-width: 500px) {
-	.s-settings {padding: 20px 15px;}
+	.s-settings {padding: 20px 20px;}
 
 	.s-settings header h2 {font-size: 20px;}
 
@@ -303,8 +426,6 @@ body {font-family: "Poppins", sans-serif;}
 		font-size: 12px;
 		margin: 0 10px;
 	}
-
-	.s-settings .buttons button:last-of-type {margin-right: 0;}
 
 	.s-settings .settings-cont {padding-bottom: 20px;margin-top: 20px;}
 
@@ -410,13 +531,21 @@ body {font-family: "Poppins", sans-serif;}
 @media (max-width: 550px) {
 	.s-controls {width: 95%; bottom: 10px;}
 
+	.s-controls.hide {
+		transform: translateX(-50%) translateY(calc(100% + 50px));
+	}
+
 	.s-controls i {padding: 15px 25px;}
 
 	.s-controls #settingsBtn,
 	.s-controls #galleryBtn {
 		position: fixed;
-		bottom: 60px;
+		bottom: 50px;
 		color: #fff;
+		width: 50px;
+		height: 50px;
+		line-height: 50px;
+		text-align: center;
 	}
 
 	.s-controls #settingsBtn {left: 0;}
@@ -426,7 +555,7 @@ body {font-family: "Poppins", sans-serif;}
 	.s-controls #settingsBtn i,
 	.s-controls #galleryBtn i {
 		color: #fff;
-		padding: 0 20px;
+		padding: 0;
 	}
 }
 
@@ -471,3 +600,9 @@ body {font-family: "Poppins", sans-serif;}
 }
 
 /* End Slider Choose */
+
+/*
+** Idea By: Kirolos Mahfouz
+** Designed By: Kirolos Mahfouz
+** Frontend By: Kirolos Mahfouz
+*/
