--- a/css/main.css
+++ b/css/main.css
@@ -31,16 +31,27 @@ body {font-family: "Poppins", sans-serif;}
 	background-color: transparent !important;
 }
 
+::-webkit-scrollbar {
+	background-color: transparent !important;
+	width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+	background: var(--main-color) !important;
+}
+
 /* End Main Settings */
 /* Start Guide */
 
 .guide {
 	position: fixed !important;
 	top: 0;
+	bottom: 0;
 	left: 0;
-	width: 100vw;
-	height: 100vh;
-	padding: 30px 50px;
+	right: 0;
+	width: 100%;
+	height: 100%;
+	padding: 30px 50px 0;
 	background-color: var(--bg-color);
 	color: var(--fg-color);
 	overflow: auto;
@@ -57,18 +68,6 @@ body {font-family: "Poppins", sans-serif;}
 	position: relative;
 	margin-bottom: 30px;
 	color: var(--main-color);
-}
-
-.guide h1::before {
-	content: 'Beta';
-	position: absolute;
-	bottom: 6px;
-	left: 213px;
-	color: var(--fg-color);
-	font-size: 14px;
-	font-weight: 400;
-	padding: 2px 8px;
-	border-radius: 3px;
 }
 
 .guide h1::after {
@@ -89,7 +88,7 @@ body {font-family: "Poppins", sans-serif;}
 
 .guide .what {margin-bottom: 20px;}
 
-.guide .how {margin-bottom: 40px;}
+.guide .how {margin-bottom: 40px; height: 48vh; overflow: auto;}
 
 .guide p {
 	font-weight: 200;
